# sensor-toolbox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: gas_flux.rs  lib.rs  main.rs  vwc.rs
tests/: comprehensive_tests.rs  test_gas_flux.rs  test_myclim.rs  vwc_tests.rs
tests/fixtures/: generate_r_data.sh  output_peat.csv  output_universal.csv
tests/fixtures/data/: data.csv
tests/fixtures/docker/: Dockerfile  script_all_soils.R
tests/fixtures/gas_flux/: col_1_rep_1.json  col_1_rep_2.json  col_9_rep_1.json  expected_fluxes.json
