[package]
name = "soil-sensor-toolbox"
version = "0.1.0"
edition = "2021"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
description = "A Rust library for processing soil moisture data from TMS4 sensors."

[lib]
name = "soil_sensor_toolbox"
path = "src/lib.rs"

[[bin]]
name = "soil-sensor-toolbox"
path = "src/main.rs"

[dependencies]
csv     = "1.1"
serde   = { version = "1.0", features = ["derive"] }
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1.0.98"

[lints.clippy]
pedantic = "warn"
