[package]
name = "soil-sensor-toolbox"
version = "0.1.2"
edition = "2021"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
description = "A Rust library for processing soil moisture data from TMS4 sensors."
license = "GPL-2.0-or-later"
repository = "https://github.com/LabSOIL/sensor-toolbox"
keywords = ["soil", "moisture", "sensor", "TMS4", "VWC"]
categories = ["science", "command-line-utilities"]

[lib]
name = "soil_sensor_toolbox"
path = "src/lib.rs"

[[bin]]
name = "soil-sensor-toolbox"
path = "src/main.rs"

[dependencies]
csv     = "1.1"
serde   = { version = "1.0", features = ["derive"] }
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1.0.98"

[lints.clippy]
pedantic = "warn"
