[package]
name = "soil-sensor-toolbox"
version = "0.2.0"
edition = "2021"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
description = "A Rust library for processing soil sensor data: TMS4 moisture/VWC and LI-7810 gas flux calculations."
license = "GPL-2.0-or-later"
repository = "https://github.com/LabSOIL/sensor-toolbox"
keywords = ["soil", "moisture", "sensor", "TMS4", "gas-flux"]
categories = ["science", "command-line-utilities"]

[lib]
name = "soil_sensor_toolbox"
path = "src/lib.rs"

[[bin]]
name = "soil-sensor-toolbox"
path = "src/main.rs"

[dependencies]
csv     = "1.1"
serde   = { version = "1.0", features = ["derive"] }
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1.0.98"

[dev-dependencies]
serde_json = "1.0"

[lints.clippy]
pedantic = "warn"
